# open_harmony

./: .gitignore  .gitmodules  Benedictus_Missa_Brevis_Exercise.xml  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
crates/cp_core/: Cargo.toml
crates/cp_core/src/: lib.rs
crates/cp_engine/: Cargo.toml
crates/cp_engine/src/: augnet_decode_assets.json  augnet_onnx.rs  augnet_postprocess.rs  augnet_preprocess.rs  lib.rs
crates/cp_engine/tests/: augnet_onnx_integration.rs  augnet_postprocess_integration.rs  augnet_preprocess_integration.rs  engine_backend_modes.rs  species_e2e.rs
crates/cp_engine/tests/fixtures/: postprocess_edge_snapshots.expected.json
crates/cp_harmony/: Cargo.toml
crates/cp_harmony/src/: lib.rs
crates/cp_io/: Cargo.toml
crates/cp_io/src/: lib.rs
crates/cp_music21_compat/: Cargo.toml  README.md
crates/cp_music21_compat/src/: augnet.rs  encoding.rs  error.rs  interval.rs  key.rs  lib.rs  musicxml.rs  pitch.rs  timeline.rs
crates/cp_music21_compat/tests/: augnet_score_parity.rs  fixtures_integration.rs
crates/cp_rules/: Cargo.toml
crates/cp_rules/src/: lib.rs
crates/cp_wasm/: Cargo.toml
crates/cp_wasm/src/: lib.rs  musicxml_import.rs
docs/demos/: cp_demo.html
docs/planning/: augnet-onnx-port-plan.md  project.md  requirements.txt  rules-canonical.md  rules-decision-log.md  rules-mapping.csv  rules-presets.json  rules-presets.md  rules-research-coverage.md  rules-test-fixtures.md  web-integration.md
docs/planning/rules-modes/: general_voice_leading.md  species1.md  species2.md  species3.md  species4.md  species5.md
docs/research/: cp_gemini.md  cp_gpt.md
models/augnet/: model-manifest.json  model-manifest.template.json
tests/augnet_parity/: fixtures_manifest.json  test_corpus_metrics.py  test_corpus_pipeline.py  test_diff_runner.py  test_music21_port_parity.py  test_postprocess_baseline.py
tests/augnet_parity/fixtures/: chunk_boundary.musicxml  divisions_change.musicxml  long_tie_chain.musicxml  multi_part_enharmonic.musicxml  pickup_anacrusis.musicxml  rest_heavy.musicxml  tied_barlines.musicxml
tests/augnet_parity/music21_baseline/: dense_poly.json  divisions_change.json  enharmonic_double.json  long_tie_chain.json  multi_part_enharmonic.json  pickup_anacrusis.json  rest_heavy.json  tied_barlines.json
tests/corpora/: when_in_rome_ci_manifest.txt
tests/music21_compat/: fixtures_manifest.json  parity_utils.py  test_chord_functions_parity.py  test_when_in_rome_parity.py
tests/music21_compat/fixtures/: enharmonic_double.musicxml
tools/augnet/: README.md  convert_to_onnx.py  diff_against_music21.py  evaluate_corpus.py  export_music21_baseline.py  fetch_model.sh  generate_decode_assets.py  metrics.py  parity_common.py  requirements-conversion.txt  requirements-corpus-eval.txt  requirements-diff.txt
tools/augnet/rust_ort_smoke/: Cargo.toml
tools/augnet/rust_ort_smoke/src/: main.rs
tools/augnet/tests/: conftest.py  test_conversion_integration.py  test_conversion_unit.py
tools/musicxml/: generate_music21_import_fixture.py
web/editor/: README.md  index.html  package-lock.json  package.json  rules-presets.json  styles.css
web/editor/scripts/: augnet-debug-dump.mjs  (+1 more)
(+37 files in other folders)
