[workspace]
members = [
  "crates/cp_core",
  "crates/cp_rules",
  "crates/cp_harmony",
  "crates/cp_engine",
  "crates/cp_io",
  "crates/cp_music21_compat",
  "crates/cp_wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["open_harmony"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
