[package]
name = "cp_wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cp_engine = { path = "../cp_engine" }
cp_core = { path = "../cp_core" }
cp_io = { path = "../cp_io" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
