[package]
name = "augnet_rust_ort_smoke"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "download-binaries", "copy-dylibs", "tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
